Initial implementation of funding events
